[life-xp-activity-service -28] implement addUserActivities(userId) method with E2E Test
- refactoring
