# life-xp-activity-service-api/src/main/java/com/bladestepapp/lifexpactivityserviceapi/controller/ActivityCommandController.java
@@ -2,11 +2,15 @@ package com.bladestepapp.lifexpactivityserviceapi.controller;
 
 import com.bladestepapp.api.ActivityCommandApi;
 import com.bladestepapp.lifexpactivityserviceapi.mapper.ActivityMapper;
-import com.bladestepapp.lifexpactivityservicecore.command.CreateActivityCommand;
-import com.bladestepapp.lifexpactivityservicecore.usecase.CreateActivityUseCase;
+import com.bladestepapp.lifexpactivityservicecore.usecase.write.CreateActivityCommand;
+import com.bladestepapp.lifexpactivityservicecore.usecase.write.CreateActivityUseCase;
+import com.bladestepapp.lifexpactivityservicecore.usecase.write.CreateUserActivityCommand;
+import com.bladestepapp.lifexpactivityservicecore.usecase.write.CreateUserActivityUseCase;
 import com.bladestepapp.model.ActivityResponse;
 import com.bladestepapp.model.CreateActivityRequest;
 import com.bladestepapp.model.CreateActivityResponse;
+import com.bladestepapp.model.CreateUserActivityRequest;
+import com.bladestepapp.model.CreateUserActivityResponse;
 import com.bladestepapp.model.MultiplierInput;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -21,11 +25,14 @@ public class ActivityCommandController implements ActivityCommandApi {
 
     private final CreateActivityUseCase createActivityUseCase;
 
-    private final ActivityMapper activityMapper;
+    private final CreateUserActivityUseCase createUserActivityUseCase;
+
+    private final ActivityMapper mapper;
+
 
     @Override
     public ResponseEntity<CreateActivityResponse> createActivity(CreateActivityRequest createActivityRequest) {
-        CreateActivityCommand command = activityMapper.map(createActivityRequest);
+        CreateActivityCommand command = mapper.map(createActivityRequest);
         UUID activityId = createActivityUseCase.execute(command);
         CreateActivityResponse createActivityResponse = new CreateActivityResponse(activityId);
         return ResponseEntity.status(HttpStatus.CREATED).body(createActivityResponse);
@@ -34,6 +41,14 @@ public class ActivityCommandController implements ActivityCommandApi {
     @Override
     public ResponseEntity<Void> deleteActivity(UUID id) {
         return null;
+    }
+
+    @Override
+    public ResponseEntity<CreateUserActivityResponse> addUserActivity(CreateUserActivityRequest createUserActivityRequest) {
+        CreateUserActivityCommand command = mapper.map(createUserActivityRequest);
+        UUID userActivityId = createUserActivityUseCase.execute(command);
+        CreateUserActivityResponse createUserActivityResponse = new CreateUserActivityResponse(userActivityId);
+        return ResponseEntity.status(HttpStatus.CREATED).body(createUserActivityResponse);
     }
 
     @Override
